--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="user_name">Unnamed</string>
     <string name="action_changeName">change name</string>
     <string name="ok">ok</string>
+    <string name="cancel">cancel</string>
 </resources>
