--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="ready">Ok</string>
     <string name="eam_accept">accept</string>
     <string name="et_input_task_hint">Input ur task</string>
+    <string name="action_refresh">refresh</string>
 </resources>
